--- a/public/styles.css
+++ b/public/styles.css
@@ -499,8 +499,17 @@ video {
 [hidden]:where(:not([hidden="until-found"])) {
   display: none;
 }
+.absolute {
+  position: absolute;
+}
 .relative {
   position: relative;
+}
+.bottom-8 {
+  bottom: 2rem;
+}
+.right-8 {
+  right: 2rem;
 }
 .z-10 {
   z-index: 10;
@@ -529,20 +538,23 @@ video {
 .h-10 {
   height: 2.5rem;
 }
+.h-44 {
+  height: 11rem;
+}
 .h-64 {
   height: 16rem;
 }
 .h-\[576px\] {
   height: 576px;
 }
-.h-dvh {
-  height: 100dvh;
-}
 .h-full {
   height: 100%;
 }
 .w-1\.5 {
   width: 0.375rem;
+}
+.w-44 {
+  width: 11rem;
 }
 .w-full {
   width: 100%;
@@ -605,6 +617,9 @@ video {
 }
 .bg-\[url\(\'\.\.\/public\/images\/block-backdrop\.svg\'\)\] {
   background-image: url('../public/images/block-backdrop.svg');
+}
+.bg-\[url\(\'\.\.\/public\/images\/cube\.png\'\)\] {
+  background-image: url('../public/images/cube.png');
 }
 .bg-\[url\(\'\.\.\/public\/images\/logo-backdrop\.svg\'\)\] {
   background-image: url('../public/images/logo-backdrop.svg');
@@ -685,6 +700,9 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.opacity-5 {
+  opacity: 0.05;
 }
 .after\:absolute::after {
   content: var(--tw-content);
